--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     for(var i=0; i< items.length;i++)
     {
-      items[i].style.color = 'green';
+      items[2].style.backgroundColor = 'green';
     }
 
 
