--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             var description = document.getElementById('description').value;
 
             // Create new li element
-            var li = document.createElement('li');
+            var li = document.createElement('li')
 
             // Add class
             li.className = 'list-group-item';
