--- a/index.html
+++ b/index.html
@@ -1,39 +1,66 @@
-<!DOCTYPE html> 
- <html lang="en"> 
- <head> 
-     <meta charset="UTF-8"> 
-     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-     <title>Document</title> 
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> 
- </head> 
- <body style="text-align: center;"> 
-     <div class="container"> 
-         <div class="row-md-12"> 
-             <p style="color: coral; font-size: 30px;">Book a call</p> 
-             <form action="" id="form" onsubmit="q(event)" style="background-color: antiquewhite; padding: 10px;"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book a call</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-                     Name: <input type="text" id="fname" name="fname"><br><br> 
+    <link rel="stylesheet" href="RegForm.css">
 
-                     Email: <input type="email" id="email" name="email"><br><br> 
+</head>
 
-                     Phone: <input type="tel" id="phone" name="phone"><br><br> 
+<body>
+    <div >
+        <section class="container-md custom-container" id="formSec">
+            <h1>Book a call</h1>
+            <h2>Book a call slot our represntative will respond within one hour of selected time.</h2><hr>
+            <form id="reg">
+                <div class="mb-2">
+                    <label for="name" >Name:</label><br>
+                    <input type="text" id="name" name="name">
+                </div>
+                <div class="mb-2">
+                    <label for="email" >Email:</label><br>
+                    <input type="email" id="email" name="e-mail">
+                </div>
+                <div class="mb-2">
+                    <label for="phone" >Phone No.:</label><br>
+                    <input type="tel" id="phone" name="phone">
+                </div>
+                <div class="mb-2">
+                    <label for="slot" >Date & Time:</label><br>
+                    <div class="row">
+                        <div class="col">
+                            <input type="date" id="date" name="date">
+                        </div>
+                        <div class="col">
+                            <input type="time" id="time" name="time"><br>
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-2">
+                    <input type="submit" value="Get a call" id="submit">
+                </div>
+            </form>
+        </section>
+         <section class="container-md custom-container" >
+            <ul id="user"></ul>
+
+            <ul class="items">
+                <li class="item1">Item1</li>
+                <li class="item2">Item2</li>
+                <!-- <li class="item">Item3</li> -->
+            </ul>
+        </section>
+    </div>
 
 
-                 <input type="submit" value="GET A CALL"> 
-             </form> 
-             <ul id="ulul"> 
-
-             </ul> 
-         </div> 
-     </div> 
-
-     <script src="main.js"> </script> 
-
-
-
- </body> 
- </html>
+    <script src="main.js"></script>
+</body>
+</html>
   
  
 
