--- a/index.html
+++ b/index.html
@@ -1,67 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book a call</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="RegForm.css">
-
-</head>
-
-<body>
-    <div >
-        <section class="container-md custom-container" id="formSec">
-            <h1>Book a call</h1>
-            <h2>Book a call slot our represntative will respond within one hour of selected time.</h2><hr>
-            <form id="reg">
-                <div class="mb-2">
-                    <label for="name" >Name:</label><br>
-                    <input type="text" id="name" name="name">
-                </div>
-                <div class="mb-2">
-                    <label for="email" >Email:</label><br>
-                    <input type="email" id="email" name="e-mail">
-                </div>
-                <div class="mb-2">
-                    <label for="phone" >Phone No.:</label><br>
-                    <input type="tel" id="phone" name="phone">
-                </div>
-                <div class="mb-2">
-                    <label for="slot" >Date & Time:</label><br>
-                    <div class="row">
-                        <div class="col">
-                            <input type="date" id="date" name="date">
-                        </div>
-                        <div class="col">
-                            <input type="time" id="time" name="time"><br>
-                        </div>
-                    </div>
-                </div>
-                <div class="mb-2">
-                    <input type="submit" value="Get a call" id="submit">
-                </div>
-            </form>
-        </section>
-         <section class="container-md custom-container" >
-            <ul id="user"></ul>
-
-            <ul class="items">
-                <li class="item1">Item1</li>
-                <li class="item2">Item2</li>
-                <!-- <li class="item">Item3</li> -->
-            </ul>
-        </section>
-    </div>
-
-
-    <script src="main.js"></script>
-</body>
+<html lang="en"> 
+ 
+<head> 
+    <body> 
+        <form action="#" onsubmit="submitdetails(event)"> 
+ 
+            <label>expenses</label> 
+            <input type="text" placeholder="Enter your expenses" id="expenses" required> 
+            <label>description</label> 
+            <input type="text" placeholder="Enter your description" id="description" required> 
+            <label>catalogue</label> 
+            <label for="catalogue">catalogue</label> 
+            <select name="catalogue" id="catalogue"> 
+            <option value="catalogue1">catalogue1</option> 
+            <option value="catalogue2">catalogue2</option> 
+            <option value="catalogue3">catalogue3</option> 
+            </select> 
+            <button >Add expenses</button> 
+          </form> 
+ 
+          <ul id="listofitems"></ul> 
+ 
+          <script src="3hrsProjectOnJS.js"> 
+        </script> 
+    </body> 
+</head> 
 </html>
-  
  
 
 
@@ -79,7 +42,7 @@
 
         
 
-      </script>
+      
   
 
 </body>
